# NavigationAR

./: .gitignore  README.md
app/: build.gradle.kts
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/com/example/tp7/: DirectionsHelper.java  MainActivity.java  NavigationManager.java
app/src/main/java/com/example/tp7/ar/: ARNavigationActivity.java  ARRouteRenderer.java  ARSceneManager.java  ARWaypoint.java  Arrow3DRenderer.java
app/src/main/java/com/example/tp7/utils/: GeoUtils.java
app/src/main/res/layout/: activity_ar_navigation.xml  activity_main.xml  dialog_route.xml  dialog_route_preview.xml  layout_navigation.xml
app/src/main/res/menu/: map_types_menu.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
keystore/: my-release-key.jks
